; ModuleID = '/home/carl/AnghaBench/reactos/dll/cpl/desk/extr_advappdlg.c_UpdateButtonColor.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/cpl/desk/extr_advappdlg.c_UpdateButtonColor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i64*, %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32* }
%struct.TYPE_7__ = type { i32, i32, i32, i32 }

@BM_SETIMAGE = common dso_local global i32 0, align 4
@IMAGE_BITMAP = common dso_local global i64 0, align 8
@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.TYPE_8__*, i32, i32, i32)* @UpdateButtonColor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @UpdateButtonColor(i32 %0, %struct.TYPE_8__* %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_8__*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca %struct.TYPE_7__, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i64, align 8
  store i32 %0, i32* %7, align 4
  store %struct.TYPE_8__* %1, %struct.TYPE_8__** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %18 = load i32, i32* %11, align 4
  %19 = icmp ne i32 %18, -1
  br i1 %19, label %20, label %82

20:                                               ; preds = %5
  %21 = load i32, i32* %7, align 4
  %22 = load i32, i32* %9, align 4
  %23 = call i32 @GetDlgItem(i32 %21, i32 %22)
  store i32 %23, i32* %16, align 4
  %24 = load i32, i32* %16, align 4
  %25 = call i32 @GetDC(i32 %24)
  store i32 %25, i32* %12, align 4
  %26 = load i32, i32* %12, align 4
  %27 = call i32 @CreateCompatibleDC(i32 %26)
  store i32 %27, i32* %13, align 4
  %28 = load i32, i32* %16, align 4
  %29 = load i32, i32* %12, align 4
  %30 = call i32 @ReleaseDC(i32 %28, i32 %29)
  %31 = load i32, i32* %13, align 4
  %32 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %33 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %32, i32 0, i32 0
  %34 = load i64*, i64** %33, align 8
  %35 = load i32, i32* %10, align 4
  %36 = sext i32 %35 to i64
  %37 = getelementptr inbounds i64, i64* %34, i64 %36
  %38 = load i64, i64* %37, align 8
  %39 = call i64 @SelectObject(i32 %31, i64 %38)
  store i64 %39, i64* %17, align 8
  %40 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %14, i32 0, i32 0
  store i32 2, i32* %40, align 4
  %41 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %14, i32 0, i32 1
  store i32 2, i32* %41, align 4
  %42 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %14, i32 0, i32 2
  store i32 22, i32* %42, align 4
  %43 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %14, i32 0, i32 3
  store i32 13, i32* %43, align 4
  %44 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %45 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %44, i32 0, i32 1
  %46 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %45, i32 0, i32 0
  %47 = load i32*, i32** %46, align 8
  %48 = load i32, i32* %11, align 4
  %49 = sext i32 %48 to i64
  %50 = getelementptr inbounds i32, i32* %47, i64 %49
  %51 = load i32, i32* %50, align 4
  %52 = call i32 @CreateSolidBrush(i32 %51)
  store i32 %52, i32* %15, align 4
  %53 = load i32, i32* %13, align 4
  %54 = load i32, i32* %15, align 4
  %55 = call i32 @FillRect(i32 %53, %struct.TYPE_7__* %14, i32 %54)
  %56 = load i32, i32* %15, align 4
  %57 = call i32 @DeleteObject(i32 %56)
  %58 = load i32, i32* %13, align 4
  %59 = load i64, i64* %17, align 8
  %60 = call i64 @SelectObject(i32 %58, i64 %59)
  %61 = load i32, i32* %13, align 4
  %62 = call i32 @DeleteDC(i32 %61)
  %63 = load i32, i32* %7, align 4
  %64 = load i32, i32* %9, align 4
  %65 = load i32, i32* @BM_SETIMAGE, align 4
  %66 = load i64, i64* @IMAGE_BITMAP, align 8
  %67 = trunc i64 %66 to i32
  %68 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %69 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %68, i32 0, i32 0
  %70 = load i64*, i64** %69, align 8
  %71 = load i32, i32* %10, align 4
  %72 = sext i32 %71 to i64
  %73 = getelementptr inbounds i64, i64* %70, i64 %72
  %74 = load i64, i64* %73, align 8
  %75 = trunc i64 %74 to i32
  %76 = call i32 @SendDlgItemMessage(i32 %63, i32 %64, i32 %65, i32 %67, i32 %75)
  %77 = load i32, i32* %7, align 4
  %78 = load i32, i32* %9, align 4
  %79 = call i32 @GetDlgItem(i32 %77, i32 %78)
  %80 = load i32, i32* @TRUE, align 4
  %81 = call i32 @EnableWindow(i32 %79, i32 %80)
  br label %94

82:                                               ; preds = %5
  %83 = load i32, i32* %7, align 4
  %84 = load i32, i32* %9, align 4
  %85 = load i32, i32* @BM_SETIMAGE, align 4
  %86 = load i64, i64* @IMAGE_BITMAP, align 8
  %87 = trunc i64 %86 to i32
  %88 = call i32 @SendDlgItemMessage(i32 %83, i32 %84, i32 %85, i32 %87, i32 0)
  %89 = load i32, i32* %7, align 4
  %90 = load i32, i32* %9, align 4
  %91 = call i32 @GetDlgItem(i32 %89, i32 %90)
  %92 = load i32, i32* @FALSE, align 4
  %93 = call i32 @EnableWindow(i32 %91, i32 %92)
  br label %94

94:                                               ; preds = %82, %20
  %95 = load i32, i32* %6, align 4
  ret i32 %95
}

declare dso_local i32 @GetDlgItem(i32, i32) #1

declare dso_local i32 @GetDC(i32) #1

declare dso_local i32 @CreateCompatibleDC(i32) #1

declare dso_local i32 @ReleaseDC(i32, i32) #1

declare dso_local i64 @SelectObject(i32, i64) #1

declare dso_local i32 @CreateSolidBrush(i32) #1

declare dso_local i32 @FillRect(i32, %struct.TYPE_7__*, i32) #1

declare dso_local i32 @DeleteObject(i32) #1

declare dso_local i32 @DeleteDC(i32) #1

declare dso_local i32 @SendDlgItemMessage(i32, i32, i32, i32, i32) #1

declare dso_local i32 @EnableWindow(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
